--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/main.conf
+      - ./docker/nginx.conf:/etc/nginx/conf.d/main.conf
       - ./sites:/usr/share/nginx/html
